syntax = "proto3";
package fx.ethermint.feemarket.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/functionx/fx-core/x/feemarket/types";

// Params defines the EVM module parameters
message Params {
  // no base fee forces the EIP-1559 base fee to 0 (needed for 0 price calls)
  bool no_base_fee = 1;
  // base fee change denominator bounds the amount the base fee can change
  // between blocks.
  uint32 base_fee_change_denominator = 2;
  // elasticity multiplier bounds the maximum gas limit an EIP-1559 block may
  // have.
  uint32 elasticity_multiplier = 3;
  // height at which the base fee calculation is enabled.
  int64 enable_height = 4;
  // base fee for EIP-1559 blocks.
  string base_fee = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  // min base fee for EIP-1559 blocks.
  string min_base_fee = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  // max base fee for EIP-1559 blocks.
  string max_base_fee = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  // replace block max gas, if > 0
  string max_gas = 8 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}